--- a/RWire10x/DESCRIPTION
+++ b/RWire10x/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: RWire10x
 Title: RWire implementation for ArchR
-Version: 0.1.03
+Version: 0.4.03
 Authors@R: 
     person(given = "Isabelle",
-           family = "Lander",
+           family = "Seufert",
            role = c("aut", "cre"),
-           email = "i.lander@dkfz-heidelberg.de",
-           comment = c(ORCID = "YOUR-ORCID-ID"))
+           email = "i.seufert@dkfz-heidelberg.de",
+           comment = c(ORCID = "0000-0001-9811-3836"))
 Description: What the package does (one paragraph).
 License: `use_mit_license()`, `use_gpl3_license()` or friends to
     pick a license
@@ -15,6 +15,7 @@ LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1.9000
 Collate: 
+    'addCoAccessibility.R'
     'addGeneIntegrationMatrix.R'
     'ArchR_ArrowUtils.R'
     'ArchR_ArrowWrite.R'
@@ -23,8 +24,8 @@ Collate:
     'ArchR_HiddenUtils.R'
     'ArchR_LoggerUtils.R'
     'ArchR_ValidationUtils.R'
-    'ArchRBrowser.R'
     'getBackgroundCoAccessibility.R'
+    'plotBrowserTrack.R'
     'getCellAggregateMatrix.R'
     'getCoAccessibility.R'
     'plotCellQuality.R'
