--- a/RWire10x/NAMESPACE
+++ b/RWire10x/NAMESPACE
@@ -5,6 +5,7 @@ export("%bcni%")
 export("%ni%")
 export(addArchRDebugging)
 export(addArchRLogging)
+export(addCoAccessibility)
 export(addGeneIntegrationMatrix)
 export(confusionMatrix)
 export(createLogFile)
